# easy-todo

./: .gitignore  README.md  package.json  vitest.config.ts
.github/workflows/: README.md  build.yml  dependency-check.yml  release.yml  rust-test.yml
ci/: build.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/capabilities_old/: main.json
src-tauri/src/: ai.rs  db.rs  error.rs  gitlab.rs  lib.rs  logging.rs  main.rs  menu.rs  todo.rs
src/components/: Todo.test.tsx  Todo.tsx
src/components/BarChart/: BarChart.test.tsx  index.tsx  style.scss  types.ts
src/components/Card/: Card.test.tsx  index.tsx  style.scss  types.ts
src/components/Layout/: Layout.test.tsx  index.tsx  style.scss  types.ts
src/components/MotivationalQuote/: MotivationalQuote.test.tsx  index.tsx  style.scss  types.ts
src/components/ProgressCircle/: ProgressCircle.test.tsx  index.tsx  style.scss  types.ts
src/components/QuadrantGrid/: QuadrantGrid.test.tsx  index.tsx  style.scss  types.ts
src/components/Sidebar/: Sidebar.test.tsx  index.tsx  style.scss  types.ts
src/components/TaskStatistics/: TaskStatistics.test.tsx  index.tsx  style.scss  types.ts
src/components/TauriTodoList/: index.tsx  style.scss
src/components/TimePeriodTabs/: TimePeriodTabs.test.tsx  index.tsx  style.scss  types.ts
src/pages/: AIReport.tsx  Dashboard.tsx  GitLabIntegration.tsx
src/services/: ai-service.ts  gitlab-api.ts
src/styles/: AIReport.scss  GitLabIntegration.scss  main.scss  theme.scss
src/tauri/: todo-bridge.ts
src/test/: setup.ts
